--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,10 @@
 preprocessing:
   contrast: true
   thresholding: true
+  threshold_values:
+    level1: 180
+    level2: 140
+    level3: 160
   resize:
     enabled: true
     fx: 2
@@ -14,7 +18,30 @@ paths:
 
 target_url: "https://v0-random-number-display-olive.vercel.app/"
 
-crop_region: [0, 200, 1550, 600]
+jp_levels:
+  - name: "Level1"
+    crop_region: [0, 80, 875, 250] #x1 y1 x2 y2
+    format:
+      currency_symbol: "€"
+      decimal_separator: "."
+      thousand_separator: ","
+      max_digits_before_decimal: 4
+
+  - name: "Level2"
+    crop_region: [875, 80, 1800, 250] #x1 y1 x2 y2
+    format:
+      currency_symbol: "€"
+      decimal_separator: "."
+      thousand_separator: ","
+      max_digits_before_decimal: 6
+
+  - name: "Level3"
+    crop_region: [250, 420, 1270, 620] #x1 y1 x2 y2
+    format:
+      currency_symbol: "€"
+      decimal_separator: "."
+      thousand_separator: ","
+      max_digits_before_decimal: 6
 
 ocr:
   psm: 7
@@ -24,15 +51,15 @@ ocr:
 format:
   currency_symbol: "€"
   min_digits_before_dot: 3
-  currency_position: "suffix"  # options: prefix, suffix, none
+  currency_position: "suffix"
   decimal_separator: "."
   thousand_separator: ","
   decimals_required: true
   min_decimals: 1
   max_decimals: 2
   max_digits_before_decimal: 4
-  max_change: 100.0     # max jump
-  max_drop: 100.0       # max fall
-  reset_threshold: 5000.0 # in case our counter went from 9999 back to 0
+  max_change: 100.0
+  max_drop: 100.0
+  reset_threshold: 5000.0
 
-interval: 1
+interval: 5 # sampling every interval 
