--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-selenium==4.16.0
-pillow==10.3.0
+opencv-python==4.6.0.66
 pytesseract==0.3.10
-pyyaml==6.0.1
-opencv-python==4.9.0.80
+numpy==1.23.5
